# CordisClaw

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md  registered-dag.html  registered-nodes.html
.cargo/: config.toml
crates/cordis-expr-plugin/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/child/add/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/child/div/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/child/mul/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/child/sub/: Cargo.toml
crates/cordis-expr-plugin/child/evaluator/src/: lib.rs
crates/cordis-expr-plugin/child/evaluator/tests/: evaluator.rs
crates/cordis-expr-plugin/child/lexer/: Cargo.toml
crates/cordis-expr-plugin/child/lexer/src/: lib.rs
crates/cordis-expr-plugin/child/lexer/tests/: lexer.rs
crates/cordis-expr-plugin/child/parser/: Cargo.toml
crates/cordis-expr-plugin/child/parser/src/: lib.rs
crates/cordis-expr-plugin/child/parser/tests/: parser.rs
crates/cordis-expr-plugin/src/: lib.rs
crates/cordis-expr-plugin/tests/: eval.rs
crates/cordis-runtime/: Cargo.toml
crates/cordis-runtime/src/: agent.rs  config.rs  host.rs  lib.rs  main.rs
crates/cordis-runtime/src/agent/: git.rs  mod.rs  web.rs
crates/cordis-runtime/src/context/: mod.rs
crates/cordis-runtime/src/core/: error.rs  models.rs
crates/cordis-runtime/src/execution/: actor.rs  dag.rs  engine.rs  gate.rs  mod.rs  net.rs  router.rs  scheduler.rs
crates/cordis-runtime/src/kernel/: auto_update.rs  evaluator.rs  health.rs  loop.rs  memory.rs  mod.rs  notify.rs  planner.rs  plugin_iteration.rs  policy.rs  verifier.rs
crates/cordis-runtime/src/plugin/: abi.rs  artifact.rs  dynamic.rs  invoke.rs  loader.rs  mod.rs  package.rs  registry.rs  shell.rs  tooling.rs
crates/cordis-runtime/src/service/: doc_registry.rs  graph_registry.rs  html_render.rs  mod.rs
crates/cordis-runtime/tests/: actor_executor.rs  architecture.rs  auto_update.rs  kernel.rs  llm_auto_update.rs  runtime_host.rs  semantics.rs  shell_plugin.rs  tooling.rs
crates/cordis-runtime/tests/support/: mod.rs
fixtures/plugins/: Cargo.toml
fixtures/plugins/expr/: Cargo.toml
fixtures/plugins/expr/docs/agent/: interfaces.json
fixtures/plugins/expr/docs/human/: overview.md
fixtures/plugins/expr/evaluator/: Cargo.toml
fixtures/plugins/expr/evaluator/add/: Cargo.toml
fixtures/plugins/expr/evaluator/add/src/: core.rs  lib.rs
fixtures/plugins/expr/evaluator/add/tests/: add.rs
fixtures/plugins/expr/evaluator/div/: Cargo.toml
fixtures/plugins/expr/evaluator/div/src/: core.rs  lib.rs
fixtures/plugins/expr/evaluator/div/tests/: div.rs
fixtures/plugins/expr/evaluator/docs/agent/: interfaces.json
fixtures/plugins/expr/evaluator/docs/human/: overview.md
fixtures/plugins/expr/evaluator/factorial/: Cargo.toml
fixtures/plugins/expr/evaluator/factorial/src/: core.rs  lib.rs
fixtures/plugins/expr/evaluator/factorial/tests/: factorial.rs
fixtures/plugins/expr/evaluator/modulo/: Cargo.toml
fixtures/plugins/expr/evaluator/modulo/src/: core.rs  lib.rs
fixtures/plugins/expr/evaluator/modulo/tests/: modulo.rs
fixtures/plugins/expr/evaluator/mul/: Cargo.toml
fixtures/plugins/expr/evaluator/pow/: Cargo.toml
fixtures/plugins/expr/evaluator/src/: core.rs  lib.rs
fixtures/plugins/expr/evaluator/sub/: Cargo.toml
fixtures/plugins/expr/evaluator/tests/: evaluator.rs
fixtures/plugins/expr/lexer/: Cargo.toml
fixtures/plugins/expr/lexer/src/: core.rs  lib.rs
fixtures/plugins/expr/lexer/tests/: lexer.rs
fixtures/plugins/expr/parser/: Cargo.toml
fixtures/plugins/expr/parser/src/: core.rs  lib.rs
fixtures/plugins/expr/parser/tests/: parser.rs
fixtures/plugins/expr/src/: lib.rs
fixtures/plugins/expr/tests/: eval.rs
fixtures/plugins/filesystem/: Cargo.toml
fixtures/plugins/filesystem/docs/agent/: interfaces.json
fixtures/plugins/filesystem/docs/human/: overview.md
fixtures/plugins/filesystem/src/: lib.rs
fixtures/plugins/gacha/: Cargo.toml  build.rs
fixtures/plugins/gacha/docs/agent/: interfaces.json
fixtures/plugins/gacha/docs/human/: overview.md
fixtures/plugins/gacha/src/: lib.rs
fixtures/plugins/gacha/tests/: basic.rs
fixtures/plugins/git/: Cargo.toml
fixtures/plugins/git/docs/agent/: interfaces.json
fixtures/plugins/git/docs/human/: overview.md
fixtures/plugins/git/src/: lib.rs
fixtures/plugins/git/tests/: stub.rs
fixtures/plugins/qq/: Cargo.toml  build.rs
fixtures/plugins/qq/cd/: Cargo.toml
fixtures/plugins/qq/cd/src/: core.rs  lib.rs
fixtures/plugins/qq/cd/tests/: cd_scaffold.rs
fixtures/plugins/qq/docs/agent/: interfaces.json
fixtures/plugins/qq/docs/human/: overview.md
fixtures/plugins/qq/src/: lib.rs
fixtures/plugins/qq/tests/: test_parse.rs
fixtures/plugins/root/: Cargo.toml
fixtures/plugins/root/child/: Cargo.toml
fixtures/plugins/root/child/src/: lib.rs
fixtures/plugins/root/child/tests/: basic.rs
fixtures/plugins/root/docs/agent/: interfaces.json
fixtures/plugins/root/docs/human/: overview.md
fixtures/plugins/root/src/: lib.rs
fixtures/plugins/root/tests/: basic.rs
fixtures/plugins/shell/: Cargo.toml
fixtures/plugins/shell/docs/agent/: interfaces.json
fixtures/plugins/shell/docs/human/: overview.md
fixtures/plugins/shell/src/: lib.rs
fixtures/plugins/shell/tests/: basic.rs
fixtures/plugins/time/: Cargo.toml
fixtures/plugins/time/docs/agent/: interfaces.json
fixtures/plugins/time/docs/human/: overview.md
fixtures/plugins/time/src/: lib.rs
fixtures/plugins/vision/: Cargo.toml
fixtures/plugins/vision/docs/agent/: interfaces.json
fixtures/plugins/vision/docs/human/: overview.md
fixtures/plugins/vision/src/: lib.rs
fixtures/plugins/web/: Cargo.toml
fixtures/plugins/web/docs/agent/: interfaces.json
fixtures/plugins/web/docs/human/: overview.md
fixtures/plugins/web/scraper/: Cargo.toml
fixtures/plugins/web/scraper/docs/: overview.md
fixtures/plugins/web/scraper/src/: lib.rs
fixtures/plugins/web/src/: lib.rs
fixtures/plugins/web/tests/: stub.rs
(+85 files in other folders)
