[workspace]
members = [
  "crates/cordis-runtime",
]
default-members = [
  "crates/cordis-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["CordisClaw"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
libloading = "0.8"
