[workspace]
members = [
  "crates/cordis-plugin-host",
  "crates/cordis-plugin-sdk",
  "crates/cordis-runtime",
]
default-members = [
  "crates/cordis-plugin-host",
  "crates/cordis-plugin-sdk",
  "crates/cordis-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["CordisClaw"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
libloading = "0.8"
