[package]
name = "cordis-expr-plugin"
version = "0.1.0"
edition = "2021"

[package.metadata.cordis]
plugin_path = "expr"
abi_kind = "rust"
declared_nodes = ["expr_entry"]
children = [
  { source = "./child/lexer", required = true, grants = [] },
  { source = "./child/parser", required = true, grants = [] },
  { source = "./child/evaluator", required = true, grants = [] },
]

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_expr_v1"
api_hash = "api_v2"

[dependencies]
cordis-expr-evaluator-plugin = { path = "./child/evaluator" }
