[package]
name = "cordis-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
cordis-plugin-sdk = { path = "../cordis-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
libloading.workspace = true
libc = "0.2"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ctrlc = "3"
rustyline = "15"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
