[workspace]
members = [
  "filesystem","root", "expr", "shell", "qq", "web", "git", "vision"]
exclude = [
  "expr/lexer",
  "expr/parser",
  "expr/evaluator",
  "expr/evaluator/add",
  "expr/evaluator/sub",
  "expr/evaluator/mul",
  "expr/evaluator/div",
  "expr/evaluator/pow",
  "expr/evaluator/modulo",
  "expr/evaluator/factorial",
]
resolver = "2"
