[workspace]
members = [
  "time",
  "filesystem", "expr", "shell", "qq", "web", "git", "vision", "gacha"]
exclude = [
  "expr/lexer",
  "expr/parser",
  "expr/evaluator",
  "expr/evaluator/add",
  "expr/evaluator/sub",
  "expr/evaluator/mul",
  "expr/evaluator/div",
  "expr/evaluator/pow",
  "expr/evaluator/modulo",
  "expr/evaluator/factorial",
]
resolver = "2"

[profile.dev]
strip = "debuginfo"
