[dependencies]
serde_json = "1"
tiny_http = "0.12"
tungstenite = "0.26"
ureq = "2"

[dependencies.cordis-plugin-sdk]
path = "../../../crates/cordis-plugin-sdk"

[dependencies.serde]
features = ["derive"]
version = "1"

[lib]
crate-type = [
    "rlib",
    "dylib",
]

[package]
edition = "2021"
name = "qq"
version = "0.1.0"

[package.metadata.cordis]
abi_kind = "rust"
declared_nodes = [
    "qq_entry",
    "qq_serve",
    "qq_fetch_messages",
    "qq_send",
]
plugin_path = "qq"

[package.metadata.cordis.abi_fingerprint]
api_hash = "api_v2"
crate_hash = "crate_qq_v1"
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"

[[package.metadata.cordis.children]]
grants = []
required = true
source = "./cd"
