[package]
name = "root"
version = "0.1.0"
edition = "2021"

[package.metadata.cordis]
plugin_path = "root"
abi_kind = "rust"
declared_nodes = ["root_entry"]
children = [
  { source = "./child", required = true, grants = ["service.db"] }
]

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_root_v1"
api_hash = "api_v2"

[package.metadata.cordis.artifact]
exports = ["service.db", "service.cache"]
