[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[package.metadata.cordis]
plugin_path = "shell"
abi_kind = "rust"
declared_nodes = ["shell_entry"]
children = []

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_shell_v1"
api_hash = "api_v2"

[dependencies]
cordis-plugin-sdk = { path = "../../../crates/cordis-plugin-sdk" }
cordis-runtime = { path = "../../../crates/cordis-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
