[package]
name = "vision"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[package.metadata.cordis]
plugin_path = "vision"
abi_kind = "rust"
declared_nodes = ["vision_ocr", "vision_describe"]
children = []

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_vision_v1"
api_hash = "api_v2"

[dependencies]
cordis-plugin-sdk = { path = "../../../crates/cordis-plugin-sdk" }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
