[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[package.metadata.cordis]
plugin_path = "web"
abi_kind = "rust"
declared_nodes = ["web_search", "web_fetch"]
children = []

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "web_deepseek_v1"
api_hash = "api_v2"

[dependencies]
cordis-plugin-sdk = { path = "../../../crates/cordis-plugin-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
