[package]
name = "expr_evaluator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[package.metadata.cordis]
plugin_path = "expr/evaluator"
abi_kind = "rust"
declared_nodes = ["expr_evaluator"]
children = [
  { source = "./add", required = true, grants = [] },
  { source = "./sub", required = true, grants = [] },
  { source = "./mul", required = true, grants = [] },
  { source = "./div", required = true, grants = [] },
  { source = "./modulo", required = true, grants = [] },
  { source = "./pow", required = true, grants = [] },
]

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_expr_evaluator_v1"
api_hash = "api_v2"

[dependencies]
cordis-plugin-sdk = { path = "../../../../crates/cordis-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace]
