[package]
name = "root_child"
version = "0.1.0"
edition = "2021"

[package.metadata.cordis]
plugin_path = "root/child"
abi_kind = "rust"
declared_nodes = ["child_entry"]
children = []

[package.metadata.cordis.abi_fingerprint]
rustc_version = "1.85.1"
target_triple = "x86_64-unknown-linux-gnu"
crate_hash = "crate_child_v1"
api_hash = "api_v2"
